[gd_scene load_steps=20 format=2]

[ext_resource path="res://Sprites/Objects/Cell Tower.png" type="Texture" id=1]
[ext_resource path="res://Objects/SmolCubeCookie.tscn" type="PackedScene" id=2]
[ext_resource path="res://Levels/BaseLevel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/Actors/Players/SmolRoboYuri/SmolRoboYuriStill.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Actors/Players/SmolYuri/SmolYuriStill.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Actors/Players/YurisFloatingHead/YurisFloatingHeadStill_Big.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Other/DialogueStarter.gd" type="Script" id=7]
[ext_resource path="res://Music/Daijoubu!.WAV" type="AudioStream" id=8]

[sub_resource type="QuadMesh" id=1]
size = Vector2( 0.75, 1.5 )
center_offset = Vector3( 0, 0.75, 0 )

[sub_resource type="SpatialMaterial" id=2]
params_cull_mode = 2
params_use_alpha_scissor = true
params_alpha_scissor_threshold = 0.98
albedo_texture = ExtResource( 1 )

[sub_resource type="QuadMesh" id=3]
size = Vector2( 0.72, 0.88 )
center_offset = Vector3( 0, 0.44, 0 )

[sub_resource type="SpatialMaterial" id=4]
params_cull_mode = 2
params_use_alpha_scissor = true
params_alpha_scissor_threshold = 0.98
albedo_texture = ExtResource( 5 )

[sub_resource type="QuadMesh" id=5]
size = Vector2( 0.72, 0.88 )
center_offset = Vector3( 0, 0.44, 0 )

[sub_resource type="SpatialMaterial" id=6]
params_cull_mode = 2
params_use_alpha_scissor = true
params_alpha_scissor_threshold = 0.98
albedo_texture = ExtResource( 4 )

[sub_resource type="QuadMesh" id=7]
size = Vector2( 1.32, 1.52 )
center_offset = Vector3( 0, 0.76, 0 )

[sub_resource type="SpatialMaterial" id=8]
params_cull_mode = 2
params_use_alpha_scissor = true
params_alpha_scissor_threshold = 0.98
albedo_texture = ExtResource( 6 )

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("YurisFloatingHead:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1.25, 7.25, -0.1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SmolRoboYuri:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1.25, 0.5, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "TakeHerAway"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("YurisFloatingHead:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1.25, 7.25, -0.1 ), Vector3( 1.25, 7.25, -0.1 ), Vector3( 1.25, 0.5, -0.1 ), Vector3( 1.25, 7.25, -0.1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SmolRoboYuri:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1.25, 0.5, 0 ), Vector3( 1.25, 0.5, 0 ), Vector3( 1.25, 7.25, 0 ) ]
}

[sub_resource type="GDScript" id=11]
script/source = "extends AnimationPlayer

export(NodePath) onready var cookie = get_node(cookie) as SmolCookie;

func _on_AnimationPlayer_animation_finished(anim_name : String):
	if anim_name == \"TakeHerAway\":
		cookie.collect_no_args();
"

[node name="WorldEnvironment" instance=ExtResource( 3 )]
music = ExtResource( 8 )

[node name="GridMap (Ground)" parent="." index="2"]
data = {
"cells": PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 65525, 0, 0, 65526, 0, 0, 65527, 0, 0, 65528, 0, 0, 65529, 0, 0, 65530, 0, 0, 65531, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 65539, 0, 1441795, 65540, 0, 655363, 65541, 0, 1441799, 65542, 0, 655364, 65543, 0, 1441797, 65544, 0, 655367, 65545, 0, 1441798, 65546, 0, 4, 131061, 0, 655364, 131062, 0, 1048581, 131063, 0, 1048582, 131064, 0, 655367, 131065, 0, 4, 131066, 0, 1048581, 131067, 0, 3, 131068, 0, 1048579, -65536, 0, 1, -65535, 0, 1, -65534, 0, 1, -65533, 0, 1, -65532, 0, 1, -65531, 0, 1, -65530, 0, 1, -65529, 0, 1, -65528, 0, 1, -65527, 0, 1, -65526, 0, 1, -11, 0, 1, -10, 0, 1, -9, 0, 1, -8, 0, 1, -7, 0, 1, -6, 0, 1, -5, 0, 1, -4, 0, 1, -3, 0, 1, -2, 0, 1, -1, 0, 1 )
}

[node name="GridMap (Harmful)" parent="." index="3"]
data = {
"cells": PoolIntArray(  )
}

[node name="GridMap (Coins)" parent="." index="4"]
data = {
"cells": PoolIntArray( 196598, 0, 2, 196600, 0, 2, 262135, 0, 2, 262136, 0, 2 )
}

[node name="Cell Tower" type="MeshInstance" parent="." index="6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="SmolCubeCookie" parent="Cell Tower" index="0" instance=ExtResource( 2 )]
pause_mode = 2
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
next_scene = "res://Levels/Level5.tscn"

[node name="SmolYuri" type="MeshInstance" parent="." index="7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.25, 0.5, 0 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="SmolRoboYuri" type="MeshInstance" parent="." index="8"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 1.25, 0.5, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="YurisFloatingHead" type="MeshInstance" parent="." index="9"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 1.25, 7.25, -0.1 )
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="DialogueStarter" type="Node" parent="." index="10"]
script = ExtResource( 7 )
dialogue = "[
	{\"speaker\":\"Smol Robo Yuri\", \"text\":\"I've upgraded the smol cell tower using the smol cube cookie you got me.\"},
	{\"text\":\"Your calls should be able to reach the void now.\"},
	{\"speaker\":\"Smol Yuri\", \"text\":\"Great! Now all I need is a [color=red]smol space suit[/color]!\"},
	{\"speaker\":\"Smol Robo Yuri\", \"text\":\"Or I could just go to [color=red]the smol moon[/color] for you.\"},
	{\"text\":\"I don't need to breathe so we could just skip the [color=red]smol space suit[/color].\"},
	{\"speaker\":\"Smol Yuri\", \"text\":\"That works too.\"},
	{\"text\":\"I guess I'll call [color=purple]Yuri's Floating Head[/color]
and ask her to take you to [color=red]the smol moon[/color].\"},
	{\"speaker\":\"\", \"text\":\"[color=purple]Smol Yuri[/color] picks up her smol phone and dial's [color=purple]Yuri's Floating Head[/color]'s number.\"},
	{\"speaker\":\"Yuri's Floating Head\", \"text\":\"Hello?\"},
	{\"speaker\":\"Smol Yuri\", \"text\":\"Can you grab [color=purple]Smol Robo Yuri[/color] and take her to [color=red]the smol moon[/color]?\"},
	{\"speaker\":\"Yuri's Floating Head\", \"text\":\"Sure, I can do that! I'll come pick her up.\"},
]"
speak_on_ready = true
only_on_first_load = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="11"]
autoplay = "RESET"
anims/RESET = SubResource( 9 )
anims/TakeHerAway = SubResource( 10 )
script = SubResource( 11 )
cookie = NodePath("../Cell Tower/SmolCubeCookie")

[connection signal="dialogue_finished" from="DialogueStarter" to="AnimationPlayer" method="play" binds= [ "TakeHerAway" ]]
[connection signal="animation_finished" from="AnimationPlayer" to="AnimationPlayer" method="_on_AnimationPlayer_animation_finished"]
