[gd_scene load_steps=17 format=2]

[ext_resource path="res://Levels/BaseLevel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/Actors/Friends/SmolSayoriStill.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Actors/Friends/SmolMonikaStill.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Objects/SmolMoonCookie.png" type="Texture" id=4]
[ext_resource path="res://Objects/SmolCookie.tscn" type="PackedScene" id=5]
[ext_resource path="res://Music/Okay, Everyone!.WAV" type="AudioStream" id=6]
[ext_resource path="res://Sprites/Actors/Players/SmolRoboYuri/SmolRoboYuriStill.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Actors/Players/YurisFloatingHead/YurisFloatingHeadStill_Big.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Actors/Players/SmolYuri/SmolYuriStill.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Actors/Players/LongYuri/LongYuriStill.png" type="Texture" id=10]
[ext_resource path="res://Scripts/Other/DialogueStarter.gd" type="Script" id=11]
[ext_resource path="res://Scripts/Other/CreditsStarter.gd" type="Script" id=12]

[sub_resource type="SpatialMaterial" id=1]
flags_transparent = true
params_cull_mode = 2
params_use_alpha_scissor = true
params_alpha_scissor_threshold = 0.98
albedo_texture = ExtResource( 4 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1.75, 2.94, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "float"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1.75, 2.94, 0 ), Vector3( 1.75, 3.2, 0 ), Vector3( 1.75, 2.94, 0 ) ]
}

[sub_resource type="GDScript" id=4]
script/source = "extends Timer

signal secret_ending_earned;
signal secret_ending_not_earned;

export var secret_ending_requirement : int = 2000;

func start(time : float = -1.0):
	.start(time);

func _on_Timer_timeout():
	if Global.coin_counter.money >= secret_ending_requirement:
		emit_signal(\"secret_ending_earned\");
	else:
		emit_signal(\"secret_ending_not_earned\");
"

[node name="WorldEnvironment" instance=ExtResource( 1 )]
music = ExtResource( 6 )
show_coin_counter = false

[node name="GridMap (Ground)" parent="." index="2"]
data = {
"cells": PoolIntArray( 0, 0, 1, 1, 0, 1, 2, 0, 1, 3, 0, 1, 4, 0, 1, 5, 0, 1, 6, 0, 1, 7, 0, 1, 8, 0, 1, 9, 0, 1, 10, 0, 1, 65525, 0, 1, 65526, 0, 1, 65527, 0, 1, 65528, 0, 1, 65529, 0, 1, 65530, 0, 1, 65531, 0, 1, 65532, 0, 1, 65533, 0, 1, 65534, 0, 1, 65535, 0, 1, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 131061, 0, 0, 131062, 0, 0, 131063, 0, 0, 131064, 0, 0, 131065, 0, 0, 131066, 0, 0, 131067, 0, 0, 131068, 0, 0, 131069, 0, 0, 131070, 0, 0, 131071, 0, 0, -65536, 0, 1, -65535, 0, 1, -65534, 0, 1, -65533, 0, 1, -65532, 0, 1, -65531, 0, 1, -65530, 0, 1, -65529, 0, 1, -65528, 0, 1, -65527, 0, 1, -65526, 0, 1, -11, 0, 1, -10, 0, 1, -9, 0, 1, -8, 0, 1, -7, 0, 1, -6, 0, 1, -5, 0, 1, -4, 0, 1, -3, 0, 1, -2, 0, 1, -1, 0, 1 )
}

[node name="GridMap (Harmful)" parent="." index="3"]
data = {
"cells": PoolIntArray(  )
}

[node name="GridMap (Coins)" parent="." index="4"]
data = {
"cells": PoolIntArray( 196598, 0, 2, 196600, 0, 2, 262135, 0, 2, 262136, 0, 2 )
}

[node name="SmolSayori" type="Sprite3D" parent="." index="6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.25, 1.39, 0 )
texture = ExtResource( 2 )

[node name="SmolMonika" type="Sprite3D" parent="." index="7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.25, 1.44, 0 )
texture = ExtResource( 3 )

[node name="SmolCookie" parent="." index="8" instance=ExtResource( 5 )]
pause_mode = 2
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.25, 2, 0 )
next_scene = ""

[node name="MeshInstance" parent="SmolCookie" index="0"]
material/0 = SubResource( 1 )

[node name="SmolYuri" type="Sprite3D" parent="." index="9"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 1.25, 1.44, 0 )
texture = ExtResource( 9 )

[node name="SmolRoboYuri" type="Sprite3D" parent="." index="10"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2.25, 1.44, 0 )
texture = ExtResource( 7 )

[node name="YFH" type="Sprite3D" parent="." index="11"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 1.75, 2.94, 0 )
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="YFH" index="0"]
pause_mode = 2
autoplay = "float"
playback_process_mode = 0
anims/RESET = SubResource( 2 )
anims/float = SubResource( 3 )

[node name="LongYuri" type="Sprite3D" parent="." index="12"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 3.25, 2.64, 0 )
texture = ExtResource( 10 )

[node name="StartingDialogue" type="Node" parent="." index="13"]
script = ExtResource( 11 )
dialogue = "[
	{\"speaker\":\"Smol Sayori\", \"text\":\"Woah, you really got it!\"},
	{\"text\":\"Let's see what it tastes like!\"},
	{\"speaker\":\"\", \"text\":\"Smol Sayori bites into the [color=red]smol moon cookie[/color].\"},
	{\"speaker\":\"Smol Sayori\", \"text\":\"This... is the best smol cookie I've ever tasted!\"},
	{\"speaker\":\"\", \"text\":\"Smol Sayori sheds a smol tear of joy.\"},
	{\"speaker\":\"Smol Sayori\", \"text\":\"Thank you, Smol Yuri!\"},
	{\"speaker\":\"Smol Yuri\", \"text\":\"Thanks, but I didn't do it alone...\"},
	{\"speaker\":\"Smol Sayori\", \"text\":\"Thanks so much, all of you!\"},
	{\"speaker\":\"\", \"text\":\"Smol Sayori runs over to her smol friends and hugs each of them.\"},
	{\"text\":\"[center][wave freq=2.5][rainbow freq=0.1]
- You Win! -[/rainbow][/wave]

Final Score: [finalscore]\"},
	
]"
speak_on_ready = true
only_on_first_load = false

[node name="Timer" type="Timer" parent="." index="14"]
wait_time = 2.0
one_shot = true
script = SubResource( 4 )

[node name="NonSecretEnding" type="Node" parent="." index="15"]
script = ExtResource( 11 )
dialogue = "[
	{\"speaker\":\"Smol Sayori\", \"text\":\"So, what happens now?\"},
	{\"speaker\":\"Smol Monika\", \"text\":\"Now the credits roll, then we'll go back to the title screen.\"},
	{\"speaker\":\"Smol Yuri\", \"text\":\"What are you talking about?\"},
	{\"speaker\":\"Smol Monika\", \"text\":\"You'll see...\"},
	{\"text\":\"Any minute now...\"},
	{\"text\":\"Just a few more seconds...\"},
	{\"text\":\"Oh, there it is!\"},
	
]"

[node name="CreditsStarter" type="Node" parent="." index="16"]
script = ExtResource( 12 )
next_scene = "res://MainMenu.tscn"

[node name="SecretEnding" type="Node" parent="." index="17"]
script = ExtResource( 11 )
dialogue = "[
	{\"speaker\":\"\", \"text\":\"You did it, this is the secret ending\"}
]"

[connection signal="dialogue_finished" from="StartingDialogue" to="Timer" method="start"]
[connection signal="secret_ending_earned" from="Timer" to="SecretEnding" method="start_dialogue"]
[connection signal="secret_ending_not_earned" from="Timer" to="NonSecretEnding" method="start_dialogue"]
[connection signal="timeout" from="Timer" to="Timer" method="_on_Timer_timeout"]
[connection signal="dialogue_finished" from="NonSecretEnding" to="CreditsStarter" method="roll_credits"]

[editable path="SmolCookie"]
